# gooty-proxy

./: .gitignore  Cargo.toml  README.md  rustfmt_options.toml
.github/: .copilot-code-instructions.md  .copilot-review-instructions.md  rust_docstring_style_guide.md
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/gatherer/: all.html  enum.Commands.html  fn.get_filestore.html  fn.handle_config_command.html  fn.handle_proxy_command.html  fn.handle_source_command.html  fn.init_proxy_manager.html  fn.main.html  fn.parse_proxy_url.html  fn.print_proxy_details.html  fn.save_results.html  fn.setup_filestore.html  fn.test_and_enrich_proxies.html  index.html  sidebar-items.js  struct.Cli.html
docs/gooty_proxy/: all.html  index.html  sidebar-items.js  static.GLOBAL.html
docs/gooty_proxy/config/: index.html  sidebar-items.js
docs/gooty_proxy/config/loader/: index.html  struct.ConfigLoader.html
docs/gooty_proxy/config/schema/: index.html  sidebar-items.js  struct.AppConfig.html  struct.ApplicationConfig.html  struct.HttpConfig.html  struct.JudgeConfig.html  struct.ProxiesConfig.html  struct.StorageConfig.html
docs/gooty_proxy/definitions/: index.html  sidebar-items.js
docs/gooty_proxy/definitions/defaults/: constant.DEFAULT_MAX_ACCEPTABLE_LATENCY_MS.html  constant.DEFAULT_PARALLEL_VALIDATIONS.html  constant.DEFAULT_REQUEST_DELAY_MS.html  constant.DEFAULT_REQUEST_RETRIES.html  constant.DEFAULT_REQUEST_TIMEOUT_SECS.html  constant.DEFAULT_USER_AGENTS.html  constant.DEFAULT_VALIDATION_TIMEOUT_SECS.html  constant.PROXY_JUDGE_URLS.html  index.html  sidebar-items.js
docs/gooty_proxy/definitions/enums/: enum.AnonymityLevel.html  enum.JudgementMode.html  enum.LogLevel.html  enum.ProxyType.html  enum.RotationStrategy.html  enum.SourceStatus.html  enum.ValidationState.html  enum.VerificationMethod.html  index.html  sidebar-items.js
docs/gooty_proxy/definitions/errors/: enum.CidrError.html  enum.ConfigError.html  enum.FilestoreError.html  enum.JudgementError.html  enum.ManagerError.html  enum.OwnershipError.html  enum.ProxyError.html  enum.RequestorError.html  enum.SleuthError.html  enum.SourceError.html  enum.UtilError.html  index.html  sidebar-items.js  type.CidrResult.html  type.ConfigResult.html  type.FilestoreResult.html  type.JudgementResult.html  type.ManagerResult.html  type.OwnershipResult.html  type.RequestResult.html  type.SleuthResult.html  type.SourceResult.html  type.UtilResult.html
docs/gooty_proxy/definitions/proxy/: index.html  struct.Proxy.html
docs/gooty_proxy/definitions/source/: index.html  struct.Source.html
docs/gooty_proxy/inspection/: index.html  sidebar-items.js
docs/gooty_proxy/inspection/cidr/: index.html  sidebar-items.js  struct.Cidr.html
docs/gooty_proxy/inspection/ipinfo/: index.html  sidebar-items.js  struct.IpMetadata.html  struct.Sleuth.html
docs/gooty_proxy/inspection/judgement/: index.html  sidebar-items.js  struct.Judge.html
docs/gooty_proxy/inspection/location/: index.html  struct.Location.html
docs/gooty_proxy/inspection/ownership/: index.html  sidebar-items.js  struct.AutonomousSystem.html  struct.NetworkInfo.html  struct.Organization.html  struct.OwnershipLookup.html
docs/gooty_proxy/io/: index.html  sidebar-items.js
docs/gooty_proxy/io/filesystem/: fn.default_auto_save_interval.html  fn.default_data_dir.html  fn.default_true.html  index.html  sidebar-items.js  struct.AppConfig.html  struct.Filestore.html  struct.FilestoreConfig.html  struct.ProxiesContainer.html  struct.SourcesContainer.html
docs/gooty_proxy/io/http/: index.html  sidebar-items.js  struct.Requestor.html
docs/gooty_proxy/orchestration/: index.html  sidebar-items.js
docs/gooty_proxy/orchestration/manager/: index.html  sidebar-items.js  struct.ProxyManager.html  struct.ProxyStats.html  struct.SourceStats.html
docs/gooty_proxy/orchestration/processes/: fn.create_progress_bar.html  fn.enrich_proxies.html  fn.fetch_from_sources.html  fn.verify_proxies.html  index.html  sidebar-items.js
docs/gooty_proxy/orchestration/threading/: fn.create_worker_pool.html  fn.execute_with_concurrency_limit.html  fn.run_concurrent_batch.html  fn.run_concurrent_batch_with_progress.html  fn.run_concurrent_batch_with_state.html  index.html  sidebar-items.js  struct.TaskManager.html
docs/gooty_proxy/utils/: fn.format_bytes.html  fn.get_random_user_agent.html  fn.is_valid_ip.html  fn.is_valid_port.html  fn.is_valid_url.html  fn.sanitize_url_for_filename.html  fn.validate_regex.html  index.html  sidebar-items.js  struct.SerializableRegex.html
docs/search.desc/gatherer/: gatherer-desc-0-.js
docs/search.desc/gooty_proxy/: gooty_proxy-desc-0-.js
docs/src/gatherer/: gatherer.rs.html
docs/src/gooty_proxy/: lib.rs.html  utils.rs.html
docs/src/gooty_proxy/config/: loader.rs.html  mod.rs.html  schema.rs.html
docs/src/gooty_proxy/definitions/: defaults.rs.html  enums.rs.html  errors.rs.html  mod.rs.html  proxy.rs.html  source.rs.html
docs/src/gooty_proxy/inspection/: cidr.rs.html  ipinfo.rs.html  judgement.rs.html  location.rs.html  mod.rs.html  ownership.rs.html
src/: lib.rs  utils.rs
src/config/: loader.rs  mod.rs  schema.rs
src/definitions/: defaults.rs  enums.rs  errors.rs  mod.rs  proxy.rs  source.rs
src/inspection/: cidr.rs  ipinfo.rs  judgement.rs  location.rs  mod.rs  ownership.rs
src/io/: filesystem.rs  http.rs  mod.rs
src/orchestration/: manager.rs  mod.rs  processes.rs  threading.rs
(+61 files in other folders)
